Bug 90827 - Missing unlock in function rpc_socket_read()
Summary: Missing unlock in function rpc_socket_read()
Status: RESOLVED FIXED
Alias: None
Product: p11-glue
Classification: Unclassified
Component: p11-kit (show other bugs)
Version: unspecified
Hardware: Other Linux (All)
: medium normal
Assignee: Stef Walter
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-06-03 07:09 UTC by Pankaj
Modified: 2015-06-03 09:20 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
p11-kit-rpc-transport.patch (540 bytes, text/plain)
2015-06-03 07:09 UTC, Pankaj
Details

Description Pankaj 2015-06-03 07:09:05 UTC
Created attachment 116254 [details]
p11-kit-rpc-transport.patch

Hi ,
There is an issue reported for "Missing p11_mutex_unlock()" before return on Error in function rpc_socket_read() and
file : p11-kit-0.23.1/p11-kit/rpc-transport.c:364

The respective patch has been attached ,Please review it.
Thanks !
Pankaj Sharma
Comment 1 Stef Walter 2015-06-03 09:20:47 UTC
Thanks! Merged into git master.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.