p11-kit: Missing unlock in function rpc_socket_read()

https://bugs.freedesktop.org/show_bug.cgi?id=90827